--- a/jquery-practice/index.html
+++ b/jquery-practice/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <title>jQuery Practice</title>
+    <link rel='stylesheet' type='text/css' href='style.css'></link>
 
     <script 
     src="https://code.jquery.com/jquery-3.6.0.min.js" 
@@ -9,9 +10,59 @@
     crossorigin="anonymous">
 </script>
 
+<script src='./second.js'></script>
+
 </head>
 <body>
-    <p id='test'>This is a paragraph!</p>
+<header>
+    <img id="menu-toggle" src="https://i.pinimg.com/originals/5e/9a/51/5e9a516fc9b2fcb1d6c19110ac4bfe13.jpg" width="400vw"/>
+</header>
+
+
+    <nav id="side-nav">
+        <ul>
+            <li><a class='active' href="#">Home</a></li>
+            <li><a href="#">My chanel</a></li>
+            <li><a href="#">Trending</a></li>
+            <li><a href="#">Subscription</a></li>
+        </ul>
+        <ul>
+            <li><p>LIBRARY</p></li>
+            <li><a href='#'>History</a></li>
+            <li><a href='#'>Watch later</a></li>
+            <li><a href='#'>Purchases</a></li>
+        </ul>
+    </nav>
+
+    <div class="info-box">
+        <div class="info-title">
+            <p>Info Title!</p>
+        </div>
+        <div class="info-content">
+            <p>kdj ajsdfkasjdoiaksfjlkasdjfdklsadjf klsfjklsdajdfkl s</p>
+
+        </div>
+
+    </div>
+    <button>Click to finish</button>
+
+    <div class="content-box">
+        <p class="content-before">Click me </p>
+        <p class="content-after"> djkfkdsj fksdjfksjfksdfjksljflsajf lsajf</p>
+
+    </div>
+
+ 
+
+
+    <!-- <p id='test'>This is a paragraph!</p>
+
+
+    <p id='p1'>Hover me!</p>
+    <p id='p2'>Click me!</p>
+    <p id='p3'>Double click me!</p>
+    <p id='p4'>Leave me alone!</p>
+    <p>Press [enter]</p> -->
 
 
     <script src='./main.js'></script>
